Refactor media section with new video content

--- a/index.html
+++ b/index.html
@@ -415,24 +415,56 @@
     </section>
 
     <!-- MEDIA -->
-    <section id="media" aria-labelledby="media-heading">
-      <h2 id="media-heading">Media</h2>
-      <div class="grid">
-        <div class="card video-card">
-          <h3>Robotic Systems for Sustainable Development</h3>
-          <p class="muted" style="margin:.15rem 0 .6rem">
-            Coursework demo — sustainability / resource optimisation scenario.
-          </p>
-          <iframe
-            src="https://www.youtube.com/embed/TF1cXHXQgaM"
-            title="Robotic Systems for Sustainable Development demo"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
-          </iframe>
-          <div class="credits">Replace this video if the second “Communication of Research” is different (right now both embeds are identical).</div>
-        </div>
+    <!-- MEDIA -->
+<section id="media" aria-labelledby="media-heading">
+  <h2 id="media-heading">Media</h2>
+  <div class="grid">
+
+    <div class="card video-card">
+      <h3>Robotic Systems for Sustainable Development</h3>
+      <p class="muted" style="margin:.15rem 0 .6rem">
+        Coursework demo — sustainability / resource optimisation scenario.
+      </p>
+      <iframe
+        src="https://www.youtube.com/embed/TF1cXHXQgaM"
+        title="Robotic Systems for Sustainable Development demo"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+      </iframe>
+      <div class="credits">If you have a different YouTube link for “Communication of Research”, replace/add it below.</div>
+    </div>
+
+    <div class="card video-card">
+      <h3>Robotic Systems Experiment: LiDAR (2D) Perception Demo</h3>
+      <p class="muted" style="margin:.15rem 0 .6rem">
+        Experiment video showing LiDAR-based sensing and results from my Robotic Systems work.
+      </p>
+
+      <!-- Dropbox-hosted MP4 (use raw=1 for direct streaming) -->
+      <video controls preload="metadata" playsinline style="width:100%; border-radius:12px; background:#000;">
+        <source
+          src="https://www.dropbox.com/scl/fi/kfksq8rta3w4xvll82p0d/LangCheng_FinalVideo.mp4?rlkey=sxjuyw592l8sh2hsfch82vkps&raw=1"
+          type="video/mp4"
+        />
+        Your browser does not support the video tag.
+      </video>
+
+      <div class="project-links" style="margin-top:.6rem">
+        <a class="btn btn-outline"
+           href="https://www.dropbox.com/scl/fi/kfksq8rta3w4xvll82p0d/LangCheng_FinalVideo.mp4?rlkey=sxjuyw592l8sh2hsfch82vkps&dl=1"
+           target="_blank" rel="noopener">
+          <i class="ri-external-link-line"></i>Open / Download
+        </a>
       </div>
-    </section>
+
+      <div class="credits">
+        Note: If the embedded video doesn’t play on some browsers, the “Open / Download” link will still work reliably.
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
     <!-- CONTACT -->
     <section id="contact" aria-labelledby="contact-heading">
